--- a/halaman.html
+++ b/halaman.html
@@ -94,6 +94,7 @@
         <h1 class="text-center">THANK YOU</h1>
     <p class="text-center watermark">creative by cntmtra__</p>
 </section>
+    <div class="h-scrollbar"><div>text</div></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
